work page module padding fixes/list styles fixes/portfolio gap fixes

--- a/src/scss/modules/clients.scss
+++ b/src/scss/modules/clients.scss
@@ -1,22 +1,27 @@
 .clients {
   // padding: 188px 0 121px;
   background-color: $gray--200;
+  padding-top: 188px;
+  padding-bottom: 121px;
 
+  @media (max-width: 1080px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
+  @media (max-width: 768px) {
+    padding-top: size-768(188);
+    padding-bottom: size-768(121);
+  }
 
-  &__wrapper {
-    padding-top: 188px;
-    padding-bottom: 121px;
-
-    @media (max-width: 1080px) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+  &.padding--work {
+    padding-top: 84px;
+    padding-bottom: 126px;
 
     @media (max-width: 768px) {
-      padding-top: size-768(188);
-      padding-bottom: size-768(121);
+      padding-top: size-768(84);
+      padding-bottom: size-768(126);
     }
   }
 
